force-app/main/default/objects/Account/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Original record ID from the legacy Oracle Siebel / SAP CRM / PostgreSQL system. Used as the external ID for upsert operations during migration.</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>