force-app/main/default/objects/Account/fields/Migration_Batch__c.field-meta.xml
<CustomField>
    <fullName>Migration_Batch__c</fullName>
    <description>Batch run ID in which this Account was migrated.</description>
    <label>Migration Batch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>