force-app/main/default/objects/Account/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <description>Current migration status of this Account record from the legacy system.</description>
    <label>Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Migrated</fullName><default>false</default><label>Migrated</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Skipped</fullName><default>false</default><label>Skipped</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>