force-app/main/default/objects/Account/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Legacy source system from which this record was migrated.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SIEBEL_8_1</fullName><default>false</default><label>Oracle Siebel 8.1</label></value>
            <value><fullName>SAP_CRM_7_0</fullName><default>false</default><label>SAP CRM 7.0</label></value>
            <value><fullName>POSTGRESQL</fullName><default>false</default><label>PostgreSQL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>